# CityDigest

./: .gitignore  README.md  newsletter.md  pyproject.toml
citydigest/: main.py  newsletter.py  pdf_content.py
