[tool.poetry]
name = "citydigest"
version = "0.1.0"
description = ""
authors = ["jonatank <jonatan.kronander@inivation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
pydantic = "^2.5.2"
openai = "^1.3.8"
instructor = "^0.4.2"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
